--- a/public/projekty/recepty/index.html
+++ b/public/projekty/recepty/index.html
@@ -19,22 +19,21 @@
   <body>
     <a href="/"><i class="fas fa-home"></i></a>
     <h1>Recepty</h1>
-    <h3>
-      <a href="/projekty/recepty/spagety_s_mletym_masem"
-        >Špagety s mletým masem</a
-      >
-    </h3>
-    <h3><a href="#">PŘIPRAVUJE SE</a></h3>
-    <h3><a href="#">PŘIPRAVUJE SE</a></h3>
-    <h3><a href="#">PŘIPRAVUJE SE</a></h3>
-    <h3><a href="#">PŘIPRAVUJE SE</a></h3>
-    <h3><a href="#">PŘIPRAVUJE SE</a></h3>
-    <h3><a href="#">PŘIPRAVUJE SE</a></h3>
-    <h3><a href="#">PŘIPRAVUJE SE</a></h3>
-    <h3><a href="#">PŘIPRAVUJE SE</a></h3>
-    <h3><a href="#">PŘIPRAVUJE SE</a></h3>
-    <h3><a href="#">PŘIPRAVUJE SE</a></h3>
-    <h3><a href="#">PŘIPRAVUJE SE</a></h3>
+    <div class="recepty">
+      <h3>
+        <a href="/projekty/recepty/spagety_s_mletym_masem"
+          >Špagety s mletým masem</a
+        >
+      </h3>
+      <h3><a href="#">PŘIPRAVUJE SE</a></h3>
+      <h3><a href="#">PŘIPRAVUJE SE</a></h3>
+      <h3><a href="#">PŘIPRAVUJE SE</a></h3>
+      <h3><a href="#">PŘIPRAVUJE SE</a></h3>
+      <h3><a href="#">PŘIPRAVUJE SE</a></h3>
+      <h3><a href="#">PŘIPRAVUJE SE</a></h3>
+      <h3><a href="#">PŘIPRAVUJE SE</a></h3>
+      <h3><a href="#">PŘIPRAVUJE SE</a></h3>
+    </div>
     <main>
       <section class="recepty"></section>
     </main>
