--- a/public/projekty/hardware/klavesnice.html
+++ b/public/projekty/hardware/klavesnice.html
@@ -72,6 +72,8 @@
         ><img src="/projekty/hardware/img/klavesnice.jpg" alt="klavesnice.jpg"
       /></a>
     </main>
-    <footer><p>Autor: Dominik Kostka</p></footer>
+    <footer>
+      <p>Designed by <b>CheeseField</b></p>
+    </footer>
   </body>
 </html>
