--- a/public/projekty/hardware/monitor.html
+++ b/public/projekty/hardware/monitor.html
@@ -59,6 +59,8 @@
         ><img src="/projekty/hardware/img/monitor.jpg" alt="monitor.jpg"
       /></a>
     </main>
-    <footer><p>Autor: Dominik Kostka</p></footer>
+    <footer>
+      <p>Designed by <b>CheeseField</b></p>
+    </footer>
   </body>
 </html>
