--- a/public/projekty/u_krvaveho_barona/index.html
+++ b/public/projekty/u_krvaveho_barona/index.html
@@ -2,21 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="/projekty/u_krvaveho_barona/images/logo.png" />
+    <link
+      rel="icon"
+      href="u_krvaveho_barona/imagesu_krvaveho_barona/images/logo.png"
+    />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link
-      rel="apple-touch-icon"
-      href="/projekty/u_krvaveho_barona/images/logo.png"
-    />
+    <link rel="apple-touch-icon" href="u_krvaveho_barona/images/logo.png" />
     <link rel="manifest" href="/manifest.json" />
-    <title>React App</title>
+    <title>U Krvavého barona</title>
     <link
-      href="u_krvaveho_barona/static/css/main.9d5b29c0.chunk.css"
+      href="u_krvaveho_barona/static/css/main.c840d685.chunk.css"
       rel="stylesheet"
     />
   </head>
@@ -80,7 +80,7 @@
                     "static/js/" +
                     ({}[e] || e) +
                     "." +
-                    { 3: "b9897e79" }[e] +
+                    { 3: "7ee4fe52" }[e] +
                     ".chunk.js"
                   );
                 })(e));
@@ -173,7 +173,7 @@
         t();
       })([]);
     </script>
-    <script src="u_krvaveho_barona/static/js/2.574aad8b.chunk.js"></script>
-    <script src="u_krvaveho_barona/static/js/main.36f49286.chunk.js"></script>
+    <script src="u_krvaveho_barona/static/js/2.0194403f.chunk.js"></script>
+    <script src="u_krvaveho_barona/static/js/main.23f14419.chunk.js"></script>
   </body>
 </html>
