skolni projekt test spusteni

--- a/public/projekty/u_krvaveho_barona/index.html
+++ b/public/projekty/u_krvaveho_barona/index.html
@@ -2,10 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link
-      rel="icon"
-      href="u_krvaveho_barona/imagesu_krvaveho_barona/images/logo.png"
-    />
+    <link rel="icon" href="u_krvaveho_barona/images/logo.png" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -174,6 +171,6 @@
       })([]);
     </script>
     <script src="u_krvaveho_barona/static/js/2.0194403f.chunk.js"></script>
-    <script src="u_krvaveho_barona/static/js/main.23f14419.chunk.js"></script>
+    <script src="u_krvaveho_barona/static/js/main.0673739f.chunk.js"></script>
   </body>
 </html>
