--- a/public/projekty/u_krvaveho_barona/index.html
+++ b/public/projekty/u_krvaveho_barona/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="u_krvaveho_barona/images/logo.png" />
+    <link rel="apple-touch-icon" href="/logo192.png" />
     <link rel="manifest" href="/manifest.json" />
     <title>U Krvavého barona</title>
     <link
@@ -171,6 +171,6 @@
       })([]);
     </script>
     <script src="u_krvaveho_barona/static/js/2.0194403f.chunk.js"></script>
-    <script src="u_krvaveho_barona/static/js/main.06f878ea.chunk.js"></script>
+    <script src="u_krvaveho_barona/static/js/main.6f4ef722.chunk.js"></script>
   </body>
 </html>
