skolni projekt spusteni 6

--- a/public/projekty/u_krvaveho_barona/index.html
+++ b/public/projekty/u_krvaveho_barona/index.html
@@ -2,15 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="u_krvaveho_barona/images/logo.png" />
+    <link rel="icon" href="/projekty/u_krvaveho_barona/images/logo.png" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="/logo192.png" />
-    <link rel="manifest" href="/manifest.json" />
+    <link
+      rel="apple-touch-icon"
+      href="/projekty/u_krvaveho_barona/images/logo.png"
+    />
+    <link rel="manifest" href="/projekty/u_krvaveho_barona/manifest.json" />
     <title>U Krvavého barona</title>
     <link
       href="u_krvaveho_barona/static/css/main.c840d685.chunk.css"
@@ -171,6 +174,6 @@
       })([]);
     </script>
     <script src="u_krvaveho_barona/static/js/2.0194403f.chunk.js"></script>
-    <script src="u_krvaveho_barona/static/js/main.6f4ef722.chunk.js"></script>
+    <script src="u_krvaveho_barona/static/js/main.7ca273e3.chunk.js"></script>
   </body>
 </html>
