--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,44 @@
     <link rel="canonical" href="/" />
     <meta name="robots" content="index, follow" />
   </head>
+  <style>
+    .loader {
+      position: absolute;
+      top: calc(50% - 4em);
+      left: calc(50% - 4em);
+      width: 6em;
+      height: 6em;
+      border: 1.1em solid rgba(0, 0, 0, 0.2);
+      border-left: 1.1em solid #000000;
+      border-radius: 50%;
+      animation: load8 1.1s infinite linear;
+      transition: opacity 0.3s;
+    }
+
+    .loader--hide {
+      opacity: 0;
+    }
+
+    @keyframes load8 {
+      0% {
+        transform: rotate(0deg);
+      }
+      100% {
+        transform: rotate(360deg);
+      }
+    }
+  </style>
   <body>
     <div id="root"></div>
+    <div id="app"></div>
+    <div class="loader"></div>
+    <script
+      crossorigin
+      src="https://unpkg.com/react@16/umd/react.development.js"
+    ></script>
+    <script
+      crossorigin
+      src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"
+    ></script>
   </body>
 </html>
