--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=2"
     />
     <meta content="IE=edge" http-equiv="X-UA-Compatible" />
+    <meta name="google-site-verification" content="leqQ4o2WY5xUCBwidSNLS6m8WEK7xA9wqxQ9fOOL1ko" />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
