home css a zvetseni borderu

--- a/public/projekty/canvas/index.html
+++ b/public/projekty/canvas/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Canvas</title>
     <link rel="stylesheet" href="canvas/css/style.css" />
+    <link rel="stylesheet" href="../../css/home.css" />
     <link
       href="../../favicon/favicon.ico"
       rel="shortcut icon"
