--- a/public/projekty/hodiny/index.html
+++ b/public/projekty/hodiny/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hodiny</title>
     <link rel="stylesheet" href="/projekty/hodiny/css/style.css" />
+    <link
+      href="../../favicon/favicon.ico"
+      rel="shortcut icon"
+      type="image/png"
+    />
   </head>
   <body>
     NEPOKRADEŠ!
