--- a/public/projects/hodiny/index.html
+++ b/public/projects/hodiny/index.html
@@ -5,14 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hodiny</title>
-    <link rel="stylesheet" href="/projects/hodiny/css/style.css" />
+    <link rel="stylesheet" href="/projects/hardware/css/style.css" />
+    <link rel="stylesheet" href="../../css/home.css" />
     <link
       href="../../favicon/favicon.ico"
       rel="shortcut icon"
       type="image/png"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
+    />
   </head>
   <body>
-    <h1>NEPOKRADEŠ!</h1>
+    <a href="/"><i class="fas fa-home" id="white"></i></a>
+    <div id="canvas-container">
+      <canvas id="canvas" width="400" height="400"></canvas>
+    </div>
   </body>
+  <script src="js/script.js"></script>
 </html>
