--- a/public/projects/hodiny/index.html
+++ b/public/projects/hodiny/index.html
@@ -23,5 +23,5 @@
       <canvas id="canvas" width="400" height="400"></canvas>
     </div>
   </body>
-  <script src="js/script.js"></script>
+  <script src="/projects/hodiny/js/script.js"></script>
 </html>
