pridani anchor tagu s cestou k souboru porkova polevka

--- a/public/projects/recepty/index.html
+++ b/public/projects/recepty/index.html
@@ -26,7 +26,7 @@
             >Špagety s mletým masem</a
           >
         </h3>
-        <h3><a href="#">PŘIPRAVUJE SE</a></h3>
+        <h3><a href="/projects/recepty/porkova_polevka">Pórková polévka</a></h3>
         <h3><a href="#">PŘIPRAVUJE SE</a></h3>
         <h3><a href="#">PŘIPRAVUJE SE</a></h3>
         <h3><a href="#">PŘIPRAVUJE SE</a></h3>
